--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "testgraphifyjs": "^1.0.7",
     "vite": "^4.4.11"
+  },
+  "dependencies": {
+    "testgraphifyjs": "^1.0.9"
   }
 }
